--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,12 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: 'gibberish';
+  src: url(/build/fonts/SquarePeg-Regular.ttf);
+  font-weight: 400;
+}
+
 h1 {
   font-size: 6rem !important;
 }
@@ -25,5 +31,3 @@ h5 {
 h6 {
   font-size: 4rem !important;
 }
-
-
