--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -580,6 +580,18 @@ video {
   right: 0px;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
+.-bottom-12 {
+  bottom: -3rem;
+}
+
+.-top-12 {
+  top: -3rem;
+}
+
 .z-50 {
   z-index: 50;
 }
@@ -748,6 +760,10 @@ video {
   height: 22rem;
 }
 
+.h-0 {
+  height: 0px;
+}
+
 .min-h-full {
   min-height: 100%;
 }
@@ -810,8 +826,8 @@ video {
   width: 2rem;
 }
 
-.w-2\/3 {
-  width: 66.666667%;
+.w-66 {
+  width: 16.5rem;
 }
 
 .w-\[32ch\] {
@@ -822,8 +838,8 @@ video {
   width: 50%;
 }
 
-.w-66 {
-  width: 16.5rem;
+.w-48 {
+  width: 12rem;
 }
 
 .max-w-7xl {
@@ -863,6 +879,16 @@ video {
 
 .translate-x-1\/2 {
   --tw-translate-x: 50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-12 {
+  --tw-translate-y: 3rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-0 {
+  --tw-translate-y: 0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -983,6 +1009,12 @@ video {
   margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-x-12 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(3rem * var(--tw-space-x-reverse));
+  margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1023,9 +1055,28 @@ video {
   border-width: 8px;
 }
 
+.border-l-4 {
+  border-left-width: 4px;
+}
+
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-\[\#F3377A\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(243 55 122 / var(--tw-border-opacity));
+}
+
+.border-\[\#1b7ee4\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(27 126 228 / var(--tw-border-opacity));
+}
+
+.border-\[\#A5DA26\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(165 218 38 / var(--tw-border-opacity));
 }
 
 .bg-slate-600 {
@@ -1066,6 +1117,26 @@ video {
 .bg-\[\#333333\] {
   --tw-bg-opacity: 1;
   background-color: rgb(51 51 51 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#1C202B\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(28 32 43 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#F3377A\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 55 122 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#1b7ee4\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(27 126 228 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#A5DA26\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(165 218 38 / var(--tw-bg-opacity));
 }
 
 .bg-timeline {
@@ -1135,6 +1206,11 @@ video {
 .py-16 {
   padding-top: 4rem;
   padding-bottom: 4rem;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .pt-1 {
@@ -1231,6 +1307,11 @@ video {
   color: rgb(139 92 246 / var(--tw-text-opacity));
 }
 
+.text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -1263,8 +1344,16 @@ video {
   transition-duration: 300ms;
 }
 
+.duration-500 {
+  transition-duration: 500ms;
+}
+
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hover\:bg-slate-800:hover {
@@ -1287,6 +1376,51 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.focus\:bg-\[\#F3377A\]:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 55 122 / var(--tw-bg-opacity));
+}
+
+.focus\:bg-\[\#1b7ee4\]:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(27 126 228 / var(--tw-bg-opacity));
+}
+
+.focus\:bg-\[\#A5DA26\]:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(165 218 38 / var(--tw-bg-opacity));
+}
+
+.group:hover .group-hover\:h-full {
+  height: 100%;
+}
+
+.group:hover .group-hover\:translate-y-12 {
+  --tw-translate-y: 3rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group:hover .group-hover\:text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:transition-\[height\] {
+  transition-property: height;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.group:focus .group-focus\:translate-y-0 {
+  --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group:focus .group-focus\:text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
 @media (min-width: 640px) {
   .sm\:w-max {
     width: -webkit-max-content;
@@ -1301,23 +1435,7 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:w-1\/2 {
-    width: 50%;
-  }
-
-  .lg\:w-1\/3 {
-    width: 33.333333%;
-  }
-
-  .lg\:w-full {
-    width: 100%;
-  }
-
   .lg\:flex-row {
     flex-direction: row;
-  }
-
-  .lg\:justify-end {
-    justify-content: flex-end;
   }
 }
